<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_common_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/click_cnt"/>
        <TextView
            android:id="@+id/click_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/CpuSerial"/>

        <TextView
            android:id="@+id/CpuSerial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/SerialNo"/>
        <TextView
            android:id="@+id/SerialNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/SystemDisplayVersion"/>
        <TextView
            android:id="@+id/SystemDisplayVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buildDate"/>
        <TextView
            android:id="@+id/buildDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/EthMacAddress"/>
        <TextView
            android:id="@+id/EthMacAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/WifiMAC"/>
        <TextView
            android:id="@+id/WifiMAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netType"/>
        <TextView
            android:id="@+id/netType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netMode"/>
        <TextView
            android:id="@+id/netMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netIp"/>
        <TextView
            android:id="@+id/netIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netGateway"/>
        <TextView
            android:id="@+id/netGateway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netMask"/>
        <TextView
            android:id="@+id/netMask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netDns1"/>
        <TextView
            android:id="@+id/netDns1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/netDns2"/>
        <TextView
            android:id="@+id/netDns2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/consoleLevel"/>

        <Spinner
            android:id="@+id/consoleLevel"
            android:entries="@array/logLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/backLight"/>

        <SeekBar
            android:id="@+id/backLight"
            android:max="100"
            android:progress="100"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/installApp"/>

        <EditText
            android:id="@+id/installApp"
            android:hint="@string/installAppTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <Button
            android:id="@+id/BtInstallApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtInstallApp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/appKeepLive"/>

        <EditText
            android:id="@+id/appKeepLive"
            android:hint="@string/appKeepLiveTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/BtsetAppKeepLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtsetAppKeepLive"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setEthIp"/>

        <EditText
            android:id="@+id/setEthIp"
            android:hint="@string/setEthIpTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789." />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setEthGateway"/>

        <EditText
            android:id="@+id/setEthGateway"
            android:hint="@string/setEthGateWayTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setEthnetMask"/>

        <EditText
            android:id="@+id/setEthnetMask"
            android:hint="@string/setEthNetMaskTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setEthDns1"/>

        <EditText
            android:id="@+id/setEthDns1"
            android:hint="@string/setEthDns1Tip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setEthDns2"/>

        <EditText
            android:id="@+id/setEthDns2"
            android:hint="@string/setEthDns2Tip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789." />

        <Button
            android:id="@+id/setEthStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setEthStatic"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ShutDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShutDown" />

        <Button
            android:id="@+id/gotosleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotosleep" />

        <Button
            android:id="@+id/exitsleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exitsleep" />

        <ToggleButton
            android:id="@+id/forbid_install_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOn="@string/allow_install_app"
            android:textOff="@string/forbid_install_app" />

        <ToggleButton
            android:id="@+id/forbid_uninstall_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOn="@string/allow_uninstall_app"
            android:textOff="@string/forbid_uninstall_app"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/key_home_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOn="@string/enable_key_home"
            android:textOff="@string/disable_key_home"/>

        <ToggleButton
            android:id="@+id/key_back_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOff="@string/disable_key_back"
            android:textOn="@string/enable_key_back" />

        <ToggleButton
            android:id="@+id/key_touch_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOn="@string/enable_touchscreen"
            android:textOff="@string/disable_touchscreen"/>

        <ToggleButton
            android:id="@+id/save_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/not_save_log"
            android:textOff="@string/save_log"/>

        <ToggleButton
            android:id="@+id/enable_eth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOn="@string/disable_eth"
            android:textOff="@string/enable_eth"/>

        <Button
            android:id="@+id/setEthAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setEthAuto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <DatePicker
            android:id="@+id/coursdaydate"
            android:layout_height="150dp"
            android:layout_width="200dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:startYear="2020"
            android:scrollbarSize="10dp" />

        <TimePicker
            android:id="@+id/coursdaytime"
            android:layout_toRightOf="@id/coursdaydate"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:timePickerMode="spinner">
        </TimePicker>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSetSystemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置系统时间"/>

        <Button
            android:id="@+id/btSetPowerOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置定时开关机"/>

        <Button
            android:id="@+id/btSetRebootDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置每日定时重启"/>
    </LinearLayout>

</LinearLayout>